Corrected format of changelog file

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
- aficio2060-tools, python-aficio2060 (0.1-1) UNRELEASED; urgency=low
+python-aficio2060 (0.1-1) UNRELEASED; urgency=low
 
   * Initial release.
 
